# docs/swagger.json
@@ -33,6 +33,51 @@
                 }
             }
         },
+        "/auth/register": {
+            "post": {
+                "description": "Registers a User in the application",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Registers a User",
+                "parameters": [
+                    {
+                        "description": "Register User",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "401": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/auth/userdisplay": {
+            "get": {
+                "description": "Displays all users",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Displays all Users",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "401": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Checks Server Health While Running",
@@ -221,7 +266,9 @@
         "operation.Actor": {
             "type": "object",
             "required": [
-                "firstName"
+                "email",
+                "first",
+                "last"
             ],
             "properties": {
                 "age": {
@@ -230,10 +277,13 @@
                 "email": {
                     "type": "string"
                 },
-                "firstName": {
+                "first": {
                     "type": "string"
                 },
-                "lastName": {
+                "id": {
+                    "type": "integer"
+                },
+                "last": {
                     "type": "string"
                 }
             }
@@ -248,6 +298,9 @@
             "properties": {
                 "actor": {
                     "$ref": "#/definitions/operation.Actor"
+                },
+                "actorID": {
+                    "type": "integer"
                 },
                 "desc": {
                     "type": "string"
